Merged in matrix_q_and_A_fix (pull request #959)
changes

* changes